[package]
name = "roll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicerollerlib = { git = "https://github.com/Tavola-Redonda/dicerollerlib", version = "0.1.0" }
command_parser = { git = "https://github.com/Tavola-Redonda/command_parser/", version = "0.1.0" }
regex = "1.10.2"
